Added most recent edits to abstract, intro, appendix 1, appendix 2-intro, ch1, and bibliography

--- a/appendix1.qmd
+++ b/appendix1.qmd
@@ -34,7 +34,7 @@ None of the T manuscripts have exact dates or places of origin, but the date ran
 The physical size of these manuscripts vary. The largest manuscript in this corpus both by height and width and by the number of its parchment folios is T-E. T-A, T-E, and T-L are each about the size of a coffee table book, while the smallest manuscript (excluding the fragmentary copies) by its height and width is T-B, which is about the size of a mass market paperback novel, and the smallest by its folio count is T-C, making this copy similar in size to a DVD case. At 225x155mm, T-D is a larger but still quite portable size, similar to most modern hardcover bestsellers. The height and width of fragment T-F^1^ is 275x190mm — about the size of the average iPad —, but it offers only one folio containing Version T bound together with other fragmentary texts to form a thin volume. The lost fragment T-F^2^ likewise only offers one full leaf of Version T, but its dimensions were exceptionally small, measuring only 70x50mm — or about the size of a matchbox. In comparing these manuscripts to more familiar modern day objects, I do not intend to assign any particular value to these codices based on their size. Rather, I wish to draw attention to a physical aspect that can be too easily overlooked in traditional catalog descriptions, and which may greatly inform our understanding of these objects by giving us basic evidence as to who read them, in what context they were read, and for what function they served.^[For example, the dimensions of the only extant manuscript copy of *Marie l'Égyptienne* - Version Y (Lille, Bibliothèque municipal, 795) are 390x280mm, but the physical reality of these numbers is much harder to conceptualize and remember than imagining the average sized oval dutch oven, which can be of very similar dimensions. With 589 folios, MS 795 is also quite a stout volume — measuring 145mm in depth, or about the length of an iPhone — and is too heavy for one person to lift and move comfortably. Thinking about all this size data more concretely helps us to more immediately understand that this was obviously not a particularly portable volume.
 ]  
 
-Among the T manuscripts, there are no images — neither miniatures nor historiated initials — to be found. Only copy T-E would have included a miniature (approximately 80x65mm) of Mary the Egyptian — most likely depicting the scene in which Zozimas gives her his cloak, based on the surviving miniatures from manuscripts containing other versions of the *Vie* —,^[There are sixteen extant medieval manuscript images associated with full French texts of *La vie de sainte Marie l’Égyptienne*. Among these, seven depict the encounter between Zozimas and Mary the Egyptian in which the holy man offers the nude Mary his cloak. For example in the miniature of a late thirteenth-century copy of Version U (Lyon, Bibliothèque municipale, 867, f.71v), Zozimas is shown shyly looking away as he gives his cloak to Mary who stares back at him. Her nude body is entirely enveloped by her long hair, and their hands meet in the center of the miniature.
+Among the T manuscripts, there are no images — neither miniatures nor historiated initials — to be found. Only copy T-E would have included a miniature (approximately 80x65mm) of Mary the Egyptian — most likely depicting the scene in which Zozimas gives her his cloak, based on the surviving miniatures from manuscripts containing other versions of the *Vie* —^[There are sixteen extant medieval manuscript images associated with full French texts of *La vie de sainte Marie l’Égyptienne*. Among these, seven depict the encounter between Zozimas and Mary the Egyptian in which the holy man offers the nude Mary his cloak. For example in the miniature of a late thirteenth-century copy of Version U (Lyon, Bibliothèque municipale, 867, f.71v), Zozimas is shown shyly looking away as he gives his cloak to Mary who stares back at him. Her nude body is entirely enveloped by her long hair, and their hands meet in the center of the miniature.
 ] but this image has been lost due to the mutilation of the manuscript.  
 
 In terms of accessibility, at time of writing, five of the manuscript copies of T have been digitized and are freely accessible online to anyone with an internet connection. These are T-A, T-D, T-E, T-F^1^, and T-F^2^. Two of these, though, are not available in color as T-A’s digitized copy was produced from its black and white microfilm and T-F^2^’s online copy is a digitization of the photographic reproduction of the lost fragment. The only T manuscripts that have not been digitized are all located in the UK. These are T-B, T-C, and T-L.^[There is an ongoing effort at the British Library to digitize more and more of their manuscript collections, but according to their most recent list of fully digitized manuscripts released in 2022, T-L has not yet been digitized. This list is available via Calum Cockburn’s blog post for the *Medieval manuscripts blog* of the British Library on 18 January 2022.] Four of the T manuscripts (T-A, T-C, T-D, and T-E) are available at their respective libraries on microfilm, and there is also a microform copy of T-L available at the Van Pelt Library at the University of Pennsylvania.^[ Unfortunately, I became aware of this microform copy too late to make use of it directly to inform this dissertation. The microforms held at the Van Pelt may be consulted on site in the library’s Microtext Department in Philadelphia, but the reproduction and interlibrary loan of any Van Pelt microforms would require the permission of the repository holding the original manuscript — in this case the BL. A complete list of the Van Pelt microforms may be found here: https://guides.library.upenn.edu/MedievalMSSmicrotext]  Taken together, all of this means that T-B is the only Version T copy whose full contents may only be considered in person in the reading room.^[In the reading room at the Bodleian, readers are permitted to take their own images for research purposes, and so I have been able to inform this dissertation with images of T-B that I took in the fall of 2022. However at the British Library, readers are not permitted to take pictures of certain manuscripts, including manuscript T-L.] While the availability of these manuscripts varies — from in-person consultation to digitized copies or microfilm — this appendix consolidates and contextualizes the scattered information about this corpus in one place, adding particular aspects of the manuscripts that have either not been discussed or systematically treated elsewhere. By preserving and synthesizing these details, this appendix supplements existing modes of access, offering a comprehensive resource for understanding the extant material record of Version T.  
@@ -82,7 +82,7 @@ Like Français 23112, manuscript Français 19525 may be found at the Richelieu s
 
 The provenance of Français 19525 has been extensively documented on the BnF online record. The digital catalog suggests that the manuscript was copied by many hands^[A: ff.1-66v; B: ff.67-122, ff.133-202; C: ff.123-132; and a later fourteenth/fifteenth-century hand on f.204] and links the codex to the atelier of William de Brailes, an English illuminator active in Oxford between 1230 and 1260. The manuscript was later purchased by Louis de Bruges (1427-1492), seigneur de Gruuthuse, whose arms are painted in the center of the lower margin of f.1r. Also visible in the upper margin of f.1r is the inscription of the poet Philippe Desportes (1546-1606). In the seventeenth century, the codex entered the library of chancellor Pierre Séguier (1588-1672) and later passed to his grandson, Henri-Charles de Cambout de Coislin (1665-1732), the Bishop of Metz. Français 19525 — along with the rest of the Coislin collection — was left to the Abbey of Saint-Germain-des-Prés on 1 May 1731 and entered the abbey’s collection in 1735. This acquisition is documented in the manuscript on f.1r on the right side of the bottom margin with the inscription “S.G. 1856” — the former shelf mark of the manuscript. In the midst of the French Revolution, the BnF acquired Français 19525 along with the thousands of other manuscripts of Saint-Germain-des-Prés in 1796.^[Delisle describes this history of the BnF’s acquisition of more than 9,000 volumes from the Saint-Germain-des-Prés collection in his chapter “Suite du Régime révolutionnaire — La bibliothèque de Saint-Germain-des-Prés” (40-58). Français 19525 was one among approximately 2,800 other French, Italian, and Spanish manuscripts from the library of Séguier (Delisle 50).]  
 
-Measuring 225x155mm, Français 19525 is composed of 204 parchment folios, along with four paper front pages and four paper back pages, added sometime during its modern rebinding. The writing space measures 145x120mm, with up to three columns per page — though Version T is consistently copied on two-column pages — and typically thirty-two lines per column. The average height of each line is 5mm. Although pricking is rarely visible due to trimming, some evidence of pricking remains, notably on the lower outer edge of f.151, where there is also a marginal note to the rubricator indicating the need for a floriated initial “e” in the text block. The parchment leaves feel rather thin and are arranged with hair-side facing hair and flesh-side facing flesh. Penciled ruling is present throughout most of the manuscript, except on ff.123-132, and the text is written above the top ruled line on each page, which supports the dating of this manuscript to the thirteenth century. The foliation is modern, with Arabic numerals in ink at the top right corner of each recto. While catchwords are absent from this manuscript — perhaps also lost due to trimming —, quire signatures in the form of Roman numerals can be seen in the center of the bottom margins of the first half of the codex. The manuscript’s rubrication is incomplete; space has been left for rubrics at the start of each text, but the rubrics themselves were never added. However, in the margins at the beginning of each text, there are faded ink notes — likely contemporary to the scribe — meant for the rubricator, indicating the subject matter of each text. For example in the bottom margin of f.15r, we can clearly read “Gypciene,” indicating the need for a rubric for the Life of Mary the Egyptian. A modern hand has also added Arabic numerals to number the texts in this codex (The Life of Mary the Egyptian is the fourth text in this manuscript.), and occasionally, modern titles are provided in thin pen ink. There is a modern table of contents on the facing page of f.1r.  
+Measuring 225x155mm, Français 19525 is composed of 204 parchment folios, along with four paper front pages and four paper back pages, added sometime during its modern rebinding. The writing space measures 145x120mm, with up to three columns per page — though Version T is consistently copied on two-column pages — and typically thirty-two lines per column. The average height of each line is 5mm. Although pricking is rarely visible due to trimming, some evidence of pricking remains, notably on the lower outer edge of f.151, where there is also a marginal note to the rubricator indicating the need for a floriated initial “e” in the text block. The parchment leaves feel rather thin and are arranged with hair-side facing hair and flesh-side facing flesh. Penciled ruling is present throughout most of the manuscript, except on ff.123-132, and the text is written above the top ruled line on each page, which supports the dating of this manuscript to the thirteenth century. The foliation is modern, with Arabic numerals in ink at the top right corner of each recto. While catchwords are absent from this manuscript — perhaps also lost due to trimming — quire signatures in the form of Roman numerals can be seen in the center of the bottom margins of the first half of the codex. The manuscript’s rubrication is incomplete; space has been left for rubrics at the start of each text, but the rubrics themselves were never added. However, in the margins at the beginning of each text, there are faded ink notes — likely contemporary to the scribe — meant for the rubricator, indicating the subject matter of each text. For example in the bottom margin of f.15r, we can clearly read “Gypciene,” indicating the need for a rubric for the Life of Mary the Egyptian. A modern hand has also added Arabic numerals to number the texts in this codex (The Life of Mary the Egyptian is the fourth text in this manuscript.), and occasionally, modern titles are provided in thin pen ink. There is a modern table of contents on the facing page of f.1r.  
 
 There are other notable physical oddities of this manuscript. For instance, there is a small triangular hole in the bottom outer corner of f.50, with a little green tassel (about 5mm long) still attached to the slight tab of parchment formed by this hole. The tassel seems to be a bookmark of some kind, appearing at the beginning of the Gospel of Nicodemus. The scribes of Français 19525 were careful to copy around the occasional preexisting holes in the parchment, such as those found on f.105. This folio (f.105) has also suffered extensive damage, apparently from scraping, with the text on the verso especially affected.^[About forty lines of text — the last four lines from the recto and some thirty-six lines scattered across the verso — are almost entirely unreadable with the naked eye.] Given that the damage is isolated to f.105, it is possible that it was inflicted intentionally, perhaps to remove an unwanted portion of text. On f.105, there is also an approximately 60mm vertical cut running from the top margin down the outer edge of the writing space on the recto. This cut disrupts the alignment of the text at the top of the first column on the verso of f.105 as the scribe chose to squeeze the first nine lines to the right of the cut. Folio 204 — the last medieval folio of this manuscript — is a fragment with the bottom two thirds of the folio having been torn away. In the remaining recto of f.204, musical notation has been added by a late medieval hand along with the charming doodle of a bird-like creature with a bearded human’s face looking up to the musical tune.  
 
@@ -90,7 +90,7 @@ In terms of binding and decoration, the cover is made of a brown marbled calf le
 
 ## T-E
 ### Paris, BnF Arsenal, 3516. ff.113v-117v. 1267/1268, from Artois.
-This manuscript is the only copy of Version T located at the Arsenal site of the BnF — though a copy of Version U (MS 3706, fifteenth century) may also be found in the Arsenal collection. Arsenal 3516 is composed of 357 parchment folios, with the addition of a paper front page and a paper endpage inserted at the time of the codex’s modern rebinding.^[According to a sticker included in its back cover, this manuscript was restored at Richelieu in 2009.] Its dimensions are 330x255mm — making it the largest copy of Version T —, with a writing space of 242x205mm. The binding of Arsenal 3516 is not featured in the digitized version available online, but the BnF record notes that it is a “Reliure en veau fauve.” The folios of the manuscript are all formatted with either three or four columns with fifty lines per column. The average height of each line is 5mm. Pricking is visible on the outer edges of the folios as well as along the bottom edge, which was used to set the width of the columns. The penciled ruling is also still plainly visible throughout the manuscript. The manuscript features both medieval and modern foliation with medieval Roman numerals appear in the the top margin of the verso in ink, while modern Arabic numerals are written in pencil in the top right corner of each recto. However, these numbers do not always agree due to the removal of thirteen leaves from throughout the codex.^[There are two leaves missing from between folios 3 and 4; one between folios 7 and 8; one between folios 34 and 35; one between folios 42 and 43; three missing from between folios 47 and 48; one between folios 296 and 297; and four missing from between folios 349 and 350.] Additionally, folios 23, 222, and 336 are all significantly smaller pieces of parchment — each about half the dimensions of the rest of the folios in this codex — that have been tipped in.^[It is difficult to visualize the size and positioning of folios 23, 222, and 336 based solely on the digitization of Arsenal 3516 available on Gallica. Online, each of these folios appear isolated against a white background and are the same size as all of the other folio images, but when viewed in-person, these folios are an obvious disruption with the larger, neighboring folios peaking out significantly from behind. Folio 23 has a single column layout with 27 lines on its recto and 28 on its verso; folio 222 has a two column layout with 40 lines on each side; and folio 336 has two columns of 40 lines each on its recto and one column of 35 lines on its verso.] Catchwords can be found in the bottom right corner of the last verso of some quires (e.g. f.91v), along with both medieval and modern quire signatures. The medieval quire signatures are Roman numerals in ink appearing in the center of the bottom margin on both the last verso and first recto of each quire (e.g. ff.115v-116r), while a modern hand has penciled in a quire count on the first recto of each quire. The modern quire count was apparently added at some point after the digitization of Arsenal 3516 was produced as these numbers do not appear online but were present during my visit to the Arsenal in January 2024.  
+This manuscript is the only copy of Version T located at the Arsenal site of the BnF — though a copy of Version U (MS 3706, fifteenth century) may also be found in the Arsenal collection. Arsenal 3516 is composed of 357 parchment folios, with the addition of a paper front page and a paper endpage inserted at the time of the codex’s modern rebinding.^[According to a sticker included in its back cover, this manuscript was restored at Richelieu in 2009.] Its dimensions are 330x255mm — making it the largest copy of Version T — with a writing space of 242x205mm. The binding of Arsenal 3516 is not featured in the digitized version available online, but the BnF record notes that it is a “Reliure en veau fauve.” The folios of the manuscript are all formatted with either three or four columns with fifty lines per column. The average height of each line is 5mm. Pricking is visible on the outer edges of the folios as well as along the bottom edge, which was used to set the width of the columns. The penciled ruling is also still plainly visible throughout the manuscript. The manuscript features both medieval and modern foliation with medieval Roman numerals appear in the the top margin of the verso in ink, while modern Arabic numerals are written in pencil in the top right corner of each recto. However, these numbers do not always agree due to the removal of thirteen leaves from throughout the codex.^[There are two leaves missing from between folios 3 and 4; one between folios 7 and 8; one between folios 34 and 35; one between folios 42 and 43; three missing from between folios 47 and 48; one between folios 296 and 297; and four missing from between folios 349 and 350.] Additionally, folios 23, 222, and 336 are all significantly smaller pieces of parchment — each about half the dimensions of the rest of the folios in this codex — that have been tipped in.^[It is difficult to visualize the size and positioning of folios 23, 222, and 336 based solely on the digitization of Arsenal 3516 available on Gallica. Online, each of these folios appear isolated against a white background and are the same size as all of the other folio images, but when viewed in-person, these folios are an obvious disruption with the larger, neighboring folios peaking out significantly from behind. Folio 23 has a single column layout with 27 lines on its recto and 28 on its verso; folio 222 has a two column layout with 40 lines on each side; and folio 336 has two columns of 40 lines each on its recto and one column of 35 lines on its verso.] Catchwords can be found in the bottom right corner of the last verso of some quires (e.g. f.91v), along with both medieval and modern quire signatures. The medieval quire signatures are Roman numerals in ink appearing in the center of the bottom margin on both the last verso and first recto of each quire (e.g. ff.115v-116r), while a modern hand has penciled in a quire count on the first recto of each quire. The modern quire count was apparently added at some point after the digitization of Arsenal 3516 was produced as these numbers do not appear online but were present during my visit to the Arsenal in January 2024.  
 
 Guggenbühl hypothesizes that Arsenal 3516 may have originally belonged to a wealthy bourgeois of Saint-Omer or perhaps to one of two brothers of King Louis IX: Charles I of Anjou, who might have received it as a wedding gift on the occasion of his marriage to Marguerite of Tonnerre, or Robert II of Artois, who could have acquired it at the time of his knighting.^[“Il pourrait s'agir, ..., soit d'un riche bourgeois de Saint-Omer, soit de deux frères du roi Louis IX: Charles Ier d'Anjou, qui pourrait l'avoir reçu en cadeau à l'occasion de son mariage avec Marguerite de Tonnerre, fille d'Études, duc de Bourgogne; ou Robert II d'Artois, lors de son adoubement” (qtd. in Françoise Laurent et al. 36-37).] There is some slight debate as to the precise year this manuscript was produced, but it certainly originates from Artois and dates to the late 1260s.^[Based on the calendar featured in the beginning of the manuscript (ff.1r-2v) Dembowski offers a dating of 1265, but Guggenbühl offers an extensive justification to situate the entirety of Arsenal 3516 to the years 1267/1268 (5-14). Likewise, in the introduction to Blacker, Burgess, and Ogden’s edition of Wace’s *Life of St Margaret*, we have the description “Probably completed in 1267 or 1268 and could have been copied at Hesdin, at the court of the counts of Artois” (Blacker et al. 149).]  
 
@@ -145,7 +145,7 @@ The provenance of French 6 is a subject of considerable interest. The fragment w
 
 > The reason for the displacement of the original central bifolium by those responsible for the present order is obvious when one considers the fragment. … the perpetrators of this change have found a way to place the beginning of a text at the beginning of the manuscript fragment, to give the impression that the fragment is a complete entity in itself. Furthermore, this text, the ‘Passion de saint Paul,’ is the only one in [MS French 6] which has an initial letter decorated in golf leaf, and is by far the most attractive introductory capital letter of any found in this fragment. (42)  
 
-But from what manuscript was this quire excised? Russell suggests that at least folios 1-8 of French 6 were originally part of British Library Egerton 2710 — a legendary dating to the second half of the thirteenth century —, a claim which he supports convincingly with both physical and textual evidence. First, there are no catchwords in French 6, but there is one medieval quire signature “XX” at the very bottom of the center margin of f.8v. Russell makes use of this quire signature to support his argument that French 6 is a continuation of Egerton 2710, which is incomplete following its own quire signature “XIX.” More compellingly, when rearranged in the proper order, f.3 of French 6 is a perfect continuation of the incomplete *Explication du Pater* of Maurice de Sully found in Egerton 2710 (43). Furthermore, Russell highlights the fact that the contents of Egerton 2710 are “very close” (44) to that of BnF Français 19525, the manuscript containing copy D of Version T of the Life of Mary the Egyptian, and in his edition, Dembowski himself suggests T-F^1^ “semble suivre de très près le même texte que le ms. D” (27). The text of copies T-D and T-F^1^ are quite similar,^[There are minor spelling differences between these copies, though T-F^1^ has been more extensively abbreviated by the scribe. T-D and T-F^1^ only noticeably differ in verse 164 where copy D offers “N’out onkes tele meschine” and copy F^1^ offers “N’out el chef plus bele crine.”] but the dimensions, formatting, decorative elements, and material evidence of BnF Français 19525 and Egerton 2710 merit closer attention before drawing any more definitive conclusions about the possible relationship between these codices.^[Based on my own observations of BnF Français 19525 and on the description of Egerton 2710 available on *Arlima* (https://arlima.net/no/4668), BnF Français 19525 is smaller than Egerton 2710, which measures 265x180mm with 40-42 lines per column.] Both BnF Français 19525 and John Rylands French 6 may be consulted online and in the reading room, but at time of writing, access to Egerton 2710 at the British Library is still limited. The likeness between BnF Français 19525 and the first folios of John Rylands French 6, originating from Egerton 2710, merits further attention elsewhere.^[It is difficult to draw definitive conclusions about how any of these Version T copies are related to one another, but Duncan Robertson offers a scheme based on what little we do know of the origins of Version T in which T-E and T-C seem to have a shared source, T-B and T-L seem to have a shared source, and T-A, T-D, and the two fragments seem to be related to one another with T-D and T-F1 the most closely linked (“The Anglo-Norman Verse Life” 30).]  
+But from what manuscript was this quire excised? Russell suggests that at least folios 1-8 of French 6 were originally part of British Library Egerton 2710 — a legendary dating to the second half of the thirteenth century — a claim which he supports convincingly with both physical and textual evidence. First, there are no catchwords in French 6, but there is one medieval quire signature “XX” at the very bottom of the center margin of f.8v. Russell makes use of this quire signature to support his argument that French 6 is a continuation of Egerton 2710, which is incomplete following its own quire signature “XIX.” More compellingly, when rearranged in the proper order, f.3 of French 6 is a perfect continuation of the incomplete *Explication du Pater* of Maurice de Sully found in Egerton 2710 (43). Furthermore, Russell highlights the fact that the contents of Egerton 2710 are “very close” (44) to that of BnF Français 19525, the manuscript containing copy D of Version T of the Life of Mary the Egyptian, and in his edition, Dembowski himself suggests T-F^1^ “semble suivre de très près le même texte que le ms. D” (27). The text of copies T-D and T-F^1^ are quite similar,^[There are minor spelling differences between these copies, though T-F^1^ has been more extensively abbreviated by the scribe. T-D and T-F^1^ only noticeably differ in verse 164 where copy D offers “N’out onkes tele meschine” and copy F^1^ offers “N’out el chef plus bele crine.”] but the dimensions, formatting, decorative elements, and material evidence of BnF Français 19525 and Egerton 2710 merit closer attention before drawing any more definitive conclusions about the possible relationship between these codices.^[Based on my own observations of BnF Français 19525 and on the description of Egerton 2710 available on *Arlima* (https://arlima.net/no/4668), BnF Français 19525 is smaller than Egerton 2710, which measures 265x180mm with 40-42 lines per column.] Both BnF Français 19525 and John Rylands French 6 may be consulted online and in the reading room, but at time of writing, access to Egerton 2710 at the British Library is still limited. The likeness between BnF Français 19525 and the first folios of John Rylands French 6, originating from Egerton 2710, merits further attention elsewhere.^[It is difficult to draw definitive conclusions about how any of these Version T copies are related to one another, but Duncan Robertson offers a scheme based on what little we do know of the origins of Version T in which T-E and T-C seem to have a shared source, T-B and T-L seem to have a shared source, and T-A, T-D, and the two fragments seem to be related to one another with T-D and T-F1 the most closely linked (“The Anglo-Norman Verse Life” 30).]  
 
 The folios that would follow f.8 of French 6 are still undiscovered, leaving the door open to the exciting possibility that the missing folios of T-F^1^ could be recovered elsewhere among the unidentified jumbled fragments of some other manuscript collection. Such a discovery would allow for a more elaborate analysis of the possible relationship between copies T-D and T-F^1^, and such a discovery would undoubtedly bring the discoverer the same satisfaction Russell himself describes, “...the satisfaction one gains from discovering the source of a manuscript fragment which has remained separated from its original manuscript for several centuries, stems no doubt from the feeling that one has, in a very small way, reversed the process of time” (46).  
 
