--- a/appendix2-intro.qmd
+++ b/appendix2-intro.qmd
@@ -11,13 +11,13 @@ For the T copies that have been digitized (T-A, T-D, T-E, T-F^1^, and T-F^2^), l
 The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
 
 ## Minimal
-The “Minimal” column offers a transcription with a low level of editorial intervention, but this column should not be considered diplomatic. Word spacing in this column matches the original manuscript, but features like initial and final letter separation are not represented. Capitalization for most proper names like *Marie* and *Deu* has been added, but all other capitalization reflects the contents of the manuscript copy. The letters u/v and i/j have been adjusted where appropriate. Punctuation only appears in this column if it has been used by the medieval scribe, and scribal abbreviations are left unexpanded.
+The “Minimal” column closely mirrors the manuscript’s original text while implementing minor regularizations for clarity — regularizations that do not require situation-specific choices. Thus the letters u/v and i/j are standardized, and proper names like *Marie* and *Deu* are capitalized. Initial and final letter separation is not represented. However, word spacing and punctuation in this column match the original manuscript. At this stage of the project, the only abbreviation marks represented throughout Appendix 2 are ampersands (&) — standing in for all “et” symbols — and the scribal abbreviation for both ‘con’ and ‘com’ (ꝯ). This minimal level of intervention allows the text to remain as faithful as possible to its source while improving basic readability.
 
 ## Intermediate
-In the “Intermediate” column, scribal abbreviations — such as &#xA76F; for “con/com” — are expanded to improve readability. However, all “et” symbols have been left unexpanded as ampersands (“&”) since this abbreviation is still widely used today. Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words.
+In the “Intermediate” column, scribal abbreviations — such as ꝯ for “con/com” — are expanded to improve readability. However, all “et” symbols have been left unexpanded as ampersands (“&”) since this abbreviation is still widely used today and, therefore, does not impede the modern reader’s ability to read the text or a computer’s ability to extract information from this common abbreviation. Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words. Other editorial choices such as spacing, spelling, or punctuation are excluded at this level, which focuses solely on the expansion of abbreviations.
 
 ## Extensive
-The “Extensive” column presents the transcription with further regularized spacing and spelling, including the addition of apostrophes to indicate contractions. Diacritical marks have not been added in the interests of improving searchability.
+The “Extensive” column includes the most extensive level of editorial intervention, regularizing word separation (with spaces and apostrophes) and — very rarely — regularizing spelling. The diacritical marks ‘é’ (‘e’ with an *accent aigu*) and ‘ç’ (‘c’ with the *cédille*) have been added where necessary in this column to help differentiate between homographs. Because I consider the insertion of other punctuation (e.g. periods, commas, quotation marks, question marks, exclamation points, etc.) to be an intervention on the level of translation, I do not add any other forms of punctuation here. This ‘Extensive’ column aims to present the most legible version of the text to a modern reader, while the other columns clearly show the steps taken to create this final level of legibility.
 
 ## Nearly Diplomatic
-In all but two of the T manuscripts (T-B and T-F^1^), the text was copied with line breaks in alignment with each verse, and so for copies T-B and T-F^1^, an additional column to the far left has been added labeled “Nearly Diplomatic.” These columns present a transcription with the “Minimal” level of intervention but also reflect the particular style in which the text was copied in each of these manuscripts. The T-B scribe copied two verses per line, indicating verse separation with a punctus, and the T-F^1^ scribe copied the verses in the style of prose, also using a punctus to separate each verse but otherwise paying no mind to the ends of verses or words to fill the writing space.
+For manuscripts T-B and T-F^1^, where the text does not conform to standard verse lineation, this supplemental column has been added, presenting the unique way each copy was formatted on the page — T-B with two verses per ruled line separated by a punctus and T-F^1^ in a continuous prose-like style with a punctus inserted to mark the end of each verse. These ‘Nearly Diplomatic’ columns present a transcription with the ‘Minimal’ level of editorial intervention but allow the additional benefit of helping the reader visualize the text as it appears on each manuscript page. With this layout, readers may more easily differentiate between decisions the copyists might have made based on the constraints of their page layout as opposed to their interpretations of the verse. T-F^1^ has been digitized, making it easier to cross-reference the edited transcript with the source manuscript, but T-B has not been digitized, so this column provides a particularly useful supplement to existing resources concerning T-B.
