--- a/chapter1.qmd
+++ b/chapter1.qmd
@@ -2,7 +2,7 @@
 title: "1. On Digital Editing"
 ---
 
-More than one hundred and twenty years ago, a manuscript fragment containing some thirty-eight lines of Anglo-Norman verse was pulled from the Qubbat Al-Khazna (The Dome of the Treasury) of the Umayyad Mosque in Damascus by German philologists granted permission to study this archive during the state visit of Wilhelm II to the Levant in the fall of 1898 (Margoliouth 400). Along with the vast collection of other manuscripts preserved there — each containing texts copied in Arabic, Greek, Latin, Hebrew, Aramaic, Coptic, Armenian, and Georgian (Giannini & Minervini 343-344) —, this fragment of Old French containing verses from Version T of *La Vie de sainte Marie l’Égyptienne* was examined by these eager philologists who carefully smoothed out the water-damaged fragment and adhered tabs to its edges so that it might be pinned down and properly photographed for transcription and further study. The Swiss-German philologist Adolf Tobler examined the fragment and published an edition of the text in 1903 before the fragment was reportedly returned to Damascus in 1909. Today, the whereabouts of this T fragment are unknown, but the memory of its existence survives in the Staatsbibliothek of Berlin via the preservation of these early twentieth-century photographs and the witness of Tobler’s edition. These photographs are now labeled MSS simulata orientalia 6 — with the T fragment appearing in photographs 101 (recto) and 89 (verso) — and are available for consultation both in-person in the reading room of the Oriental and East Asia Department and online via the Staatsbibliothek’s Digitized Collections. The memory of this lost fragment is the only textual evidence we have that Version T of *La Vie de sainte Marie l’Égyptienne *travelled as far as the Middle East. We cannot know exactly how or why this witness to the T-poem made its way over to the Qubbat Al-Khazna,[^51] but because we know *of *this fragment, we know that it did. The fact of this text’s movement as made evident by the photographs and edition of the now-lost T fragment broadens the context of this saint’s Life and situates it in a larger multicultural and multilingual history.[^52]
+More than one hundred and twenty years ago, a manuscript fragment containing some thirty-eight lines of Anglo-Norman verse was pulled from the Qubbat Al-Khazna (The Dome of the Treasury) of the Umayyad Mosque in Damascus by German philologists granted permission to study this archive during the state visit of Wilhelm II to the Levant in the fall of 1898 (Margoliouth 400). Along with the vast collection of other manuscripts preserved there — each containing texts copied in Arabic, Greek, Latin, Hebrew, Aramaic, Coptic, Armenian, and Georgian (Giannini & Minervini 343-344) — this fragment of Old French containing verses from Version T of *La Vie de sainte Marie l’Égyptienne* was examined by these eager philologists who carefully smoothed out the water-damaged fragment and adhered tabs to its edges so that it might be pinned down and properly photographed for transcription and further study. The Swiss-German philologist Adolf Tobler examined the fragment and published an edition of the text in 1903 before the fragment was reportedly returned to Damascus in 1909. Today, the whereabouts of this T fragment are unknown, but the memory of its existence survives in the Staatsbibliothek of Berlin via the preservation of these early twentieth-century photographs and the witness of Tobler’s edition. These photographs are now labeled MSS simulata orientalia 6 — with the T fragment appearing in photographs 101 (recto) and 89 (verso) — and are available for consultation both in-person in the reading room of the Oriental and East Asia Department and online via the Staatsbibliothek’s Digitized Collections. The memory of this lost fragment is the only textual evidence we have that Version T of *La Vie de sainte Marie l’Égyptienne *travelled as far as the Middle East. We cannot know exactly how or why this witness to the T-poem made its way over to the Qubbat Al-Khazna,[^51] but because we know *of *this fragment, we know that it did. The fact of this text’s movement as made evident by the photographs and edition of the now-lost T fragment broadens the context of this saint’s Life and situates it in a larger multicultural and multilingual history.[^52]
 
 Peter Dembowski — who offers the variants of T-F^2^ to readers through the paratext of his 1977 edition of Version T — notes that although this fragment is undoubtedly a copy of the T-poem, “il ne paraît suivre de près aucune des versions connues de notre poème” (27), making it a rather unique copy to consider. And yet, no one working on the French tradition of Mary the Egyptian has made use of this fragment in their analyses. I offer the case of T-F^2^, then, as an opportunity to evaluate the way in which scholars currently discover, search for, study, edit, and share medieval texts today. I invite us all to take stock of our current practices, think about how we can find solutions to the most fundamental challenges to conducting our research, and look optimistically to a future of manuscript studies empowered by digital methods.
 
@@ -12,9 +12,9 @@ The process of tracking down and working on T-F^2^ for this dissertation may sou
 
 Dembowski’s edition acknowledges the existence of T-F^2^ and directs interested readers to Tobler’s 1903 edition, but these editors do not fully agree on their transcriptions of the fragment and neither editor is able to report the fragment’s present location — or the location of any surrogates for the fragment — with any greater detail than Damascus as its place of recovery. Without the fragment itself or at least images of the fragment, it is impossible to verify these editors’ transcriptions — a necessary step in producing a new T edition. Digging deeper into the story of the Qubbat Al-Khazna collection eventually leads to the scholarship of Radiciotti and D’Ottone (2008), which sheds more light on the collection of manuscripts in general but still does not address T-F^2^’s current location. Finally, Giannini and Minervini (2020) provide a more comprehensive analysis of the Old French fragments extracted from the Damascus collection, and they report that T-F^2^ is considered lost. It is because of Giannini and Minervini that I finally became aware of the original photographs currently housed in the Staatsbibliothek and of their digital surrogates now available online; to my knowledge, no prior scholar mentioned the photographic record, even though the images were made at the turn of the nineteenth to twentieth centuries. Buoyed by the existence of these digitized images, I transcribed the fragment for myself, feeling I was, at last, able to enter into a proper editorial conversation with both Tobler and Dembowski concerning T-F^2^.
 
-But using the digitized images alone, I was still unable to replicate either editor’s transcription in full, and suspecting the original photographs could provide greater clarity, I traveled to Berlin. Confronted with a more tangible presence of the fragment in the reading room — even if only an old photograph of the fragment —, I felt a profound connection to this artifact and to the centuries-long web of transmission that had brought this twelfth-century text to my twenty-first-century attention.[^53] I was pleased to see that the color contrast was, in fact, a bit clearer — though still mostly illegible in parts — in the material photographs than in the current digitization of the photographs online. In the reading room — knowing that I had limited time with the photographs — I found myself looking more closely and more urgently than I ever had before at the digitized images. It was in the reading room that I noticed the way the philologists had used tabs and little nails to pin the fragment down. Handling the photograph, I was struck by the thought that I was now handling photos produced by someone whose hands presumably touched T-F^2^, and in taking a few pictures of the photo with my iPhone,[^54] I replicated this former photographer’s ritual of remediation.[^55] To be sure, my interaction with the photograph was more gentle — sans glue or nails or bright lights —, but the previous photographer and I (and the medieval copyist before us) shared like missions: to create a visual record of this text, to study and edit its contents, and to share its knowledge with others.[^56]
+But using the digitized images alone, I was still unable to replicate either editor’s transcription in full, and suspecting the original photographs could provide greater clarity, I traveled to Berlin. Confronted with a more tangible presence of the fragment in the reading room — even if only an old photograph of the fragment — I felt a profound connection to this artifact and to the centuries-long web of transmission that had brought this twelfth-century text to my twenty-first-century attention.[^53] I was pleased to see that the color contrast was, in fact, a bit clearer — though still mostly illegible in parts — in the material photographs than in the current digitization of the photographs online. In the reading room — knowing that I had limited time with the photographs — I found myself looking more closely and more urgently than I ever had before at the digitized images. It was in the reading room that I noticed the way the philologists had used tabs and little nails to pin the fragment down. Handling the photograph, I was struck by the thought that I was now handling photos produced by someone whose hands presumably touched T-F^2^, and in taking a few pictures of the photo with my iPhone,[^54] I replicated this former photographer’s ritual of remediation.[^55] To be sure, my interaction with the photograph was more gentle — sans glue or nails or bright lights — but the previous photographer and I (and the medieval copyist before us) shared like missions: to create a visual record of this text, to study and edit its contents, and to share its knowledge with others.[^56]
 
-What if the German philologists had never taken these photographs? We might then have no proof that Version T was ever present in the Middle East, and therefore would be left with a far narrower conception of this text’s audience and transmission. What if the Staatsbibliothek did not digitize these photographs or prohibited interested scholars from consulting them, or — even worse — discarded them? No one would ever be able to verify the work of Tobler or Dembowski, and T-F^2^ would be even more of a ghost than it already is.[^57] Although T-F^2^ offers few lines, making it less helpful as a stand-alone witness to the text of Version T, the *fact *of T-F^2^'s existence is important to keep in mind as scholars attempt to determine this text’s purpose, its message, its audience. Giving this fragment scholarly attention, opens up the conversation around T to consider the unknown traveler who carried this text apparently in writing — but perhaps mostly in their mind — on their journey east, and keeping this unknown traveler in our mind prevents us from narrowing this text's possibilities.[^58] Individual manuscript copies, however small, have stories that helpfully complicate our narratives of the past and its literature.[^59]
+What if the German philologists had never taken these photographs? We might then have no proof that Version T was ever present in the Middle East, and therefore would be left with a far narrower conception of this text’s audience and transmission. What if the Staatsbibliothek did not digitize these photographs or prohibited interested scholars from consulting them, or — even worse — discarded them? No one would ever be able to verify the work of Tobler or Dembowski, and T-F^2^ would be even more of a ghost than it already is.[^57] Although T-F^2^ offers few lines, making it less helpful as a stand-alone witness to the text of Version T, the *fact *of T-F^2^'s existence is important to keep in mind as scholars attempt to determine this text’s purpose, its message, its audience. Giving this fragment scholarly attention opens up the conversation around T to consider the unknown traveler who carried this text apparently in writing — but perhaps mostly in their mind — on their journey east, and keeping this unknown traveler in our mind prevents us from narrowing this text's possibilities.[^58] Individual manuscript copies, however small, have stories that helpfully complicate our narratives of the past and its literature.[^59]
 
 I provide this anecdote of working on T-F^2^ to highlight the fact that access to the ‘originals’ is still necessary and is often preferable, but also that remediation — by way of photographic reproduction, digitization, and/or editing — is just as critically important. Digitization and editing each act as forms of secondhand preservation — particularly valuable in the unfortunate event of a lost original.[^60] And digitization and editing work together ensure our texts remain discoverable and accessible and researchable. In this chapter, I survey the ongoing scholarly conversations concerning the influence of the digital turn on medieval manuscript studies — particularly addressing debates concerning manuscript digitization and questions on the function of digital editions. As I discuss below, digitization and digital editing are by no means meant to replace material sources but rather provide us with still more avenues for making meaningful scholarly inquiries and for ensuring the longevity of our sources even after the material itself has vanished.
 
@@ -60,19 +60,19 @@ It is a valid concern that the increased prevalence of digital surrogates might 
 
 ### 2. (Im)material and (In)human
 
-A common anxiety about digital materials is that they are somehow less ‘real’ — immaterial, disembodied, or inhuman. But Whearty reminds us that this is an illusion, and she draws our attention to the ever-present human labors behind all technologies, “The digital presents itself as immaterial, unmediated, unproduced by human laborers. But that is a lie. Humans are always there. They always have been” (*Digital Codicology* 120). Digital manuscripts may lack the tactile qualities of parchment, but they are no less material. They reside on physical servers, require environmental infrastructure, and are shaped at every stage by human labor and interpretation. Whearty identifies the roots of this misunderstanding in two late twentieth-century rhetorics, “... first, that digital things are disembodied, with no real physical form; and second, that analog books are under threat of extinction from these disembodied digital forms” (*Digital Codicology *11), and she memorably answers these concerns writing, “Pixels can represent parchment, but they cannot *become it*” (*Digital Codicology *12). Whearty’s distinction here is essential. The digital does not erase the material; it reframes it. Recognizing the digital as materially grounded and human-produced for human purposes allows us to move beyond unproductive debates over what is and is not ‘real.’
+A common anxiety about digital materials is that they are somehow less ‘real’ — immaterial, disembodied, or inhuman. But Whearty reminds us that this is an illusion, and she draws our attention to the ever-present human labors behind all technologies, “The digital presents itself as immaterial, unmediated, unproduced by human laborers. But that is a lie. Humans are always there. They always have been” (*Digital Codicology* 120). Digital manuscripts may lack the tactile qualities of parchment, but they are no less material. They reside on physical servers, require environmental infrastructure, and are shaped at every stage by human labor and interpretation. Whearty identifies the roots of this misunderstanding in two late twentieth-century rhetorics, “... first, that digital things are disembodied, with no real physical form; and second, that analog books are under threat of extinction from these disembodied digital forms” (*Digital Codicology *11), and she memorably answers these concerns writing, “Pixels can represent parchment, but they cannot *become it*” (*Digital Codicology *12). Whearty’s distinction here is essential. The digital does not erase the material; it reconstitutes it. Recognizing the digital as materially grounded and human-produced for human purposes allows us to move beyond unproductive debates over what is and is not ‘real.’
 
 Similarly, the term ‘ghost’ is used frequently in discussions of digitized manuscripts by detractors and supporters of digitization alike. In the chapter “The Ghost in the Machine: Digital Avatars of Medieval Manuscripts” (2008), Siân Echard argues that we have not learned to see through the illusion of the digital facsimile in the same way that we have print editions:
 
 > The screenic presentation seen by Cerquiglini as liberating also haunts us with the substitution of one body for another – a substitution that happened in the world of the printed edition, too, but which we have there at least learned to recognize. The trick with the digital facsimile is that the language of reality and presence, allied with the public mantra of accessibility, implies a kind of transparency, when what is offered is in fact an opaque simulacrum, one that is ‘uncannily’ familiar. (215)
 
-I am skeptical of the idea that we have learned to recognize and separate print editions from their ‘original’ source manuscripts when print editions are most frequently the sole source of our literary scholarship. It is true that editions do not attempt to *be* the source manuscript in the same sense that digital facsimiles might, but most readers of editions tend to believe that they are faithful representations of the ‘true’ immaterial text — truer even than the messy medieval manuscript copy — as editors typically attempt to promote the authority of their editions by downplaying the intervention of their editing. Every edition is a fabrication, the product of an editor’s labor, but editions are subjected to far less questioning that digitized manuscripts seem to be. Tamsyn Mahoney-Steel rightly acknowledges the ghostly relationship between our sources and our editions:
+I am skeptical of the idea that we have learned to recognize and separate print editions from their ‘original’ source manuscripts in a truly meaningful way when print editions are most frequently the sole source of our literary scholarship. It is true that editions do not attempt to *be* the source manuscript in the same sense that digital facsimiles might, but most readers of editions tend to believe that they are faithful representations of the ‘true’ immaterial text — truer even than the messy medieval manuscript copy — as editors typically attempt to promote the authority of their editions by downplaying the intervention of their editing. Every edition is a fabrication, the product of an editor’s labor, but editions are subjected to far less questioning that digitized manuscripts seem to be. Tamsyn Mahoney-Steel rightly acknowledges the ghostly relationship between our sources and our editions:
 
 > Latent within our theories of editing and efforts as editors is an unnecessary dualism. Just as philosophers have posited and tried to overcome mind-body and mind-world dualism, so we can posit and attempt to surmount such a rift between the edition and its source. Whether or not we subscribe to Bédier’s idea of the ‘best text’, or Karl Lachmann’s stemmatics, the text, in some fashion or another, hovers at our shoulder like a ghostly entity, demanding to be perfectly rendered and expressed in our edition. We console ourselves that a one-to-one translation from source to edition is never possible, and that somehow with each attempt at editing we must try to come closer to the source, even though like Achilles we can never pass the tortoise. (136)
 
 Either by way of digitization or editing, we may try to come ever closer to our source material, but we know we can never match it. We cannot ask any one iteration or format to do everything, but approaching our source material in multiple ways can help to fill in the inevitable gaps that emerge between the ‘original’ and its representation. In her blog “The Uncanny Valley and the Ghost in the Machine” (2018), Dot Porter encourages us to think practically about the work we do with these resources,
 
-> ... I do a lot of thinking about what is is we do. And there’s a question, one question that keeps me up at nights [*sic*] and drives the focus of my current research. The question comes out of a statement and that statement is: The digitized manuscript is not the manuscript itself. … If the digitized manuscript isn’t the manuscript, then what is it? This is not actually the question that keeps me up nights, because although this is interesting, it’s not *practical* or *useful* for me. My job is to make these things available so you can use them. So the question that actually keeps me up at night is: If a digitized manuscript isn’t a manuscript, how can we present it in ways that explore aspects of the original’s manuscript-ness, ethically and with care, while both pushing and respecting the boundaries of technology? Although this practice of thinking about what it means to digitize a manuscript and what that becomes seems really philosophical, this is really [a] practical question. (Porter’s emphasis)
+> ... I do a lot of thinking about what it is we do. And there’s a question, one question that keeps me up at nights [*sic*] and drives the focus of my current research. The question comes out of a statement and that statement is: The digitized manuscript is not the manuscript itself. … If the digitized manuscript isn’t the manuscript, then what is it? This is not actually the question that keeps me up nights, because although this is interesting, it’s not *practical* or *useful* for me. My job is to make these things available so you can use them. So the question that actually keeps me up at night is: If a digitized manuscript isn’t a manuscript, how can we present it in ways that explore aspects of the original’s manuscript-ness, ethically and with care, while both pushing and respecting the boundaries of technology? Although this practice of thinking about what it means to digitize a manuscript and what that becomes seems really philosophical, this is really [a] practical question. (Porter’s emphasis)
 
 Porter underscores the need for digital practices that are critically self-aware, technically thoughtful, and above all, aligned with the curator’s joint missions of care and preservation, outreach and engagement, and research and scholarship. Echoing this constructive outlook, Deborah McGrady, in her work on the digitized Machaut corpus, urges us to consider the benefits of these disembodied representations, “While we may lament that the digitized manuscript ghosts the book, we may need to stop and consider how digital matter can also enliven texts by providing unprecedented access to textual bodies and by resuscitating the desires that shaped the medieval reading experience” (22-23).
 
@@ -96,7 +96,7 @@ Whearty calls for greater transparency in how digital projects evolve. Her ideal
 
 Just as reproducibility has become a concern in the sciences, we face a similar ongoing crisis in medieval manuscript studies.[^79] The long history of warring editorial practices is marked by the unending desire to address the reader’s lack of confidence in the editions available.[^80] How can any given reader feel totally assured of the editor’s work? In the absence of more widespread public access to manuscripts, their surrogate images, and clearer documentation of editorial decision-making, readers are typically left to accept the existing editions of medieval texts based on their faith in the editor alone. As Françoise Vieillard and Olivier Guyotjeannin advise in their *Conseils pour l’édition des textes médiévaux* (2001), the editor must make their decisions clear to the reader via the introduction to the edition and additional notes so that the reader is in a position to judge the editor’s work.[^81] But how can any reader truly judge the work of the editor if they do not have access to the source manuscripts themselves? Cerquiglini writes that readers of print editions have no other recourse but to accept the editor’s work with “la générosité loyale” (112), but digital methods offer the potential to break these epistemic barriers.
 
-As Peter Robinson has observed, “In the days of the print edition, one could only raise such questions by, effectively, redoing all the editor’s work.” (“Electronic Editions” 7). And as I have experienced myself in working through Tobler and Dembowski’s previous editions of T-F^2^, truly verifying an edition requires hunting down either the original manuscripts or images of it, transcribing and editing it anew, effectively replicating their editorial labors. And whereas Dembowski provides his transcription of T-F^2^ in his extensive variance notes — which must be manually reconstructed by the reader —, and Tobler simply claims in his introduction that he has inserted a ‘few missing letters’,[^82] my digital edition of T-F^2^ (available in Appendix 2) is able to connect readers to the digitized surrogate images of the fragment and to present T-F^2^ with more clearly established levels of editorial intervention that may be understood without requiring the reader to decipher and piece together encoded notes.[^83] The progress made here is not some radical change to the way we transcribe and edit texts, but rather in the reader’s ability to reasonably recognize and verify the editor’s work and to feel more confident in the text presented. As Lit has argued, “A more obvious breakthrough, already gained, is that editions can now be based much easier on manuscript witnesses from all corners of the world, and it is fairly easy to check existing editions against actual manuscript evidence” (98). With the increased adoption of digitization and digital editing, we can do more to address the crisis of confidence in our readers, and as Lit further argues, these methods enable readers to then assess our scholarly arguments with greater scrutiny, “...whereas before we could not expect our readers to have access to the manuscripts in order to fact-check our argumentation” (100). If we can more rigorously evaluate our editions via increased access to medieval manuscripts and their digital surrogates, then we can feel more confident in the validity of all our scholarly output resulting from such editions. When images are publicly available, and editions are designed for interrogation and interaction, manuscript studies as an endeavor becomes more reproducible and transparent — without sacrificing complexity or rigor. This is not a lowering of standards (with flashy, bedazzling webpages replacing paper books); it is a raising of standards as we hold ourselves evermore accountable to the scrutiny of our readers.
+As Peter Robinson has observed, “In the days of the print edition, one could only raise such questions by, effectively, redoing all the editor’s work.” (“Electronic Editions” 7). And as I have experienced myself in working through Tobler and Dembowski’s previous editions of T-F^2^, truly verifying an edition requires hunting down either the original manuscripts or images of it, transcribing and editing it anew, effectively replicating their editorial labors. Whereas Dembowski provides his transcription of T-F^2^ in his extensive variance notes — which must be manually reconstructed by the reader — and Tobler simply claims in his introduction that he has inserted a ‘few missing letters’,[^82] my digital edition of T-F^2^ (available in Appendix 2) is able to connect readers to the digitized surrogate images of the fragment and to present T-F^2^ with more clearly established levels of editorial intervention that may be understood without requiring the reader to decipher and piece together encoded notes.[^83] The progress made here is not some radical change to the way we transcribe and edit texts, but rather in the reader’s ability to reasonably recognize and verify the editor’s work and to feel more confident in the text presented. As Lit has argued, “A more obvious breakthrough, already gained, is that editions can now be based much easier on manuscript witnesses from all corners of the world, and it is fairly easy to check existing editions against actual manuscript evidence” (98). With the increased adoption of digitization and digital editing, we can do more to address the crisis of confidence in our readers, and as Lit further argues, these methods enable readers to then assess our scholarly arguments with greater scrutiny, “...whereas before we could not expect our readers to have access to the manuscripts in order to fact-check our argumentation” (100). If we can more rigorously evaluate our editions via increased access to medieval manuscripts and their digital surrogates, then we can feel more confident in the validity of all our scholarly output resulting from such editions. When images are publicly available, and editions are designed for interrogation and interaction, manuscript studies as an endeavor becomes more reproducible and transparent — without sacrificing complexity or rigor. This is not a lowering of standards (with flashy, bedazzling webpages replacing paper books); it is a raising of standards as we hold ourselves evermore accountable to the scrutiny of our readers.
 
 ### 4. Automation and Augmentation
 
@@ -108,7 +108,7 @@ Though he welcomes advancements in automation, Lit specifically addresses the ne
 
 Though transcription may seem ripe for automation, “...transcription itself is not an objective task but can be considered an editorial task dependent on the editor’s erudition” (Lit 172). For example, Alpo Honkapohja’s *Digital Medievalist* article “Digital Approaches to Manuscript Abbreviations” (2021) presents the many complications associated with extracting insights from scribal abbreviations via digitally encoded transcriptions and how these complications necessitate human intervention. First, both the paleographic appearance of abbreviations and their intended expansions may vary greatly over time and context, and even individual scribal abbreviations may give conflicting instructions on how they should be expanded and understood by the reader. Second, normalizing text transcriptions — standard practice in modern editing — leads to the loss of potentially valuable information that could, for example, be used by paleographers to date and localize source manuscripts. And finally, while automatically generated data may be a useful research tool, Honkapohja cautions, “The risk is that automatic processes might generate huge quantities of bad data” (para. 58). At every stage, informed human judgement is essential to producing good data and using that good data to ask and answer human questions. And despite the many challenges associated with such research, Honkapohja suggests we are moving towards "something of a golden age for this fascinating area of study” (para. 58).
 
-Even prior to the digital turn, Foulet and Speer likewise reject any tendencies toward excessive automation in the editing process:
+Even prior to the digital turn, Foulet and Speer likewise rejected any tendencies toward excessive automation in the editing process:
 
 > A purely mechanical system of editing (even if such a thing exists) is inappropriate for Old French Texts; hence the editor’s informed judgment or subjectivity must play a crucial role in each stage of the editing process. Any edition is a conjecture; it also constitutes a critical interpretation of the text. (38)
 
@@ -143,6 +143,16 @@ In his contribution to the 2007 volume *Digital Philology and Medieval Texts*, P
 > Present a text; Present the different historical forms of the text; Present the differences between the historical forms of the text; Explain the relationship between the different historical forms; Explain how the editor edited; Let the reader test the editor’s methods and conclusions. (“Electronic Editions” 1-2)
 
 He goes on to argue that print editions are only *maybe *better than digital editions at doing the first thing: presenting a text. Essentially, digital editions allow us to make editions that are better at creating visualizations, visualizations that enable readers to *see* what they might otherwise be blind to in a traditional print edition. The editing practices of this dissertation seek to meet Robinson’s criteria:
+
+**1. Present a text, and present the different historical forms of the text:** Each manuscript witness of Version T is edited — with clearly delineated layers of editorial intervention — and presented in full in Appendix 2, giving greater visibility to even modest witnesses to the text like fragment T-F2.[^92]
+
+**2. Present the different historical forms of the text, and present the differences between the historical forms of the text:** Appendix 1 provides a thorough description and transmission history of each manuscript witness of Version T, placing each manuscript in context.
+
+**3. Explain the relationship between the different historical forms:**[^93] Chapter 3 of this dissertation focuses on comparing the T portraits across the corpus, illuminating textual variance and the literary implications of that variance in detail.
+
+**4. Explain how the editor edited:** While Chapter 1 has provided rationale for the use of digital methods and the format of a digital edition, Chapter 2 details my exact editing methods.
+
+**5. Let the reader test the editor’s methods and conclusions:** This dissertation invites readers to evaluate my editorial rationale and interpretive claims in multiple ways. Digital facsimiles of the T manuscripts are provided where available (Appendix 2), and each edited transcription in Appendix 2 offers distinct layers of editorial intervention (explained in Chapter 2), allowing readers to clearly differentiate between my own editorial choices and what the medieval scribe actually copied. English translations and enhanced visualizations of the T portraits (available in Chapter 2) enable readers to more easily trace both continuity and variance across the copies. Together these resources create a solid foundation for readers to further scrutinize the close reading presented in Chapter 3.
 
 This dissertation embraces recent advancements in digital methods to try to achieve the mandates of the New Philology movement: to treat manuscript witnesses with respect, to foreground textual variance, and to invite readers into the complexity rather than smooth it away. While no single edition can be all things to all readers, this one seeks to align its priorities with the best guidance of digital medievalists working today, and to return to Foulet and Speer’s best advice for editing Old French texts, “In other words, editing is not a science, but an art” (39).
 
