--- a/intro.qmd
+++ b/intro.qmd
@@ -52,7 +52,7 @@ But why does Version T, among all the various French accounts of Mary’s life, 
 
 Though I am not at all opposed to viewing Mary the Egyptian as a ‘spiritually-empowered female,’ I am somewhat skeptical of this characterization being equally applied to versions in which she is not even the central character of the narrative.[^9] Version T pulls Mary the Egyptian from the margins of her own legend and makes her the central protagonist. This major narrative shift was clearly an intentional, meaningful choice on the part of the T-poet, and it warrants more analysis than it has received.
 
-Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition*,* portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne *22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, a great deal of scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
+Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition*,* portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne *22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, ample of scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
 
 Robertson considers the translation of the saint’s Life into the French vernacular a signal of a renewal of interest in her Life. He points to the period as one in which the act of reading became particularly pertinent to spirituality, in which there was an upsurge in Marian devotion, and in which hagiography was influenced by “poets and romancers” (“Poem and Spirit” 306) to suit the tastes of a lay audience. He insists that the text is not a vulgarization of the saint’s Life; rather the poet demonstrates a clear sense of orthodoxy (“Poem and Spirit” 316). For Robertson, the content and rhetoric of the text when combined become a “manifestation of Grace” (“Poem and Spirit” 319), exemplifying the paradoxical nature of Mary the Egyptian as a holy sinner. She invokes the Virgin, who “is not merely a person but an incarnate formal principle, the universal reconciliation of contraries — nothing more and nothing less than poetry itself” (“Poem and Spirit” 318). His assessment, however, is not shared by Simon Gaunt who emphasizes the sexual pleasure the text may have been intended to arouse in a male audience at the expense of women:
 
@@ -88,7 +88,7 @@ Although Gaunt, Howie, and Campbell are all engaging with overlapping source mat
 
 ## Cross-Copy Reading & The Difference It Makes
 
-Paying attention to the different manuscripts of T, — with the many alterations in details that they include, elide, and emphasize — allows us to build upon current readings of the French Mary the Egyptian, of her body, her beauty, and her holiness. While much of the existing scholarship on Version T relies on Dembowski’s edition, — and thus largely relies on Manuscript A (Paris BnF MS fr. 23112) — this dissertation seeks to enrich the present conversation by engaging more comprehensively with the array of manuscript copies available. The exploration of Version T in this dissertation aims not just to add another voice to the existing scholarship but to reshape the present conversation by foregrounding a greater level of scrutiny to the text across its manuscript witnesses. In doing so, I seek to open up new avenues for reading Mary with fresh eyes. By thoroughly examining the full body of textual evidence available, we may enjoy an increased level of confidence and clarity in our scholarly conclusions.
+Paying attention to the different manuscripts of T, — with the many alterations in details that they include, elide, and emphasize — allows us to build upon current readings of the French Mary the Egyptian, of her body, her beauty, and her holiness. While much of the existing scholarship on Version T relies on Dembowski’s edition — and thus largely relies on Manuscript A (Paris BnF MS fr. 23112) — this dissertation seeks to enrich the present conversation by engaging more comprehensively with the array of manuscript copies available. The exploration of Version T in this dissertation aims not just to add another voice to the existing scholarship but to reshape the present conversation by foregrounding a greater level of scrutiny to the text across its manuscript witnesses. In doing so, I seek to open up new avenues for reading Mary with fresh eyes. By thoroughly examining the full body of textual evidence available, we may enjoy an increased level of confidence and clarity in our scholarly conclusions.
 
 To provide a clear example of the benefit of cross-copy reading and the difference it makes in our analyses, I turn to the work of Élisabeth Pinto-Mathieu. In her comparative analysis of the Lives of Mary the Egyptian, Mary Magdalene, and Thaïs, Pinto-Mathieu highlights the challenge of navigating the diverse and evolving hagiographic traditions across languages and centuries.[^34] Pinto-Mathieu seeks textual stability in her article by centering the *Legenda aurea*, arguing that vernacular versions of hagiographic texts tend to be “pures traductions d’une tradition latine souvent plus érudite” (90) anyway, but she does at various points also make use of the many French versions of the Mary the Egyptian *Vie*, including in particular Version T. In the article, Pinto-Mathieu does mention two specific manuscripts of Version T — BnF MS fr. 23112, or T-A, and MS Canonici Misc. 74, or T-B (100n15&16) — but these copies are only referenced specifically in order to indicate T’s placement chronologically in the broader French tradition so that Pinto-Mathieu might use Version T to explore a feature entirely absent from the Latin tradition: the portraits of Mary the Egyptian — one describing her body during her sexually promiscuous phase and one describing her body as an ascetic in the desert.
 
@@ -105,11 +105,11 @@ T-L: “Cacune **traiant** de la dome” → “N’avoit plus char en son **tra
 T-F^1^: [offers only the first 10.5 verses of Portrait 1]  
 T-F^2^: [both portraits missing]  
 
-When reading across the T corpus, instead of relying solely on one manuscript copy, we can see that this particular argument of Mary’s supposedly degraded beauty may be called into question. How valid is it to say that the once erotic, sensual, sinful Mary the Egyptian is no longer desirable, or even touchable, in her more purified ascetic form if we find a consistent use of *traians* regardless of Mary’s state of being? The difference of a single word in a single manuscript may seem significant, but when examined more closely, it can reveal how seemingly stable arguments rely on faulty evidence.
+When reading across the T corpus, instead of relying solely on one manuscript copy, we can see that this particular argument of Mary’s supposedly degraded beauty may be called into question. How valid is it to say that the once erotic, sensual, sinful Mary the Egyptian is no longer desirable, or even touchable, in her more purified ascetic form if we find a consistent use of *traians* regardless of Mary’s state of being? The difference of a single word in a single manuscript may seem significant, but when examined more closely, it can reveal how seemingly stable arguments rely on incomplete evidence.
 
 I might just as easily draw a completely contrasting conclusion regarding Mary’s sensuality using the evidence of a single word found only in a single manuscript copy of T. If I were to base my reading solely on manuscript T-C, for example, I could — by the same method — come to the conclusion that Mary’s initial form is one that is hard and threatening while her ascetic form is soft and inviting. In manuscript T-C, Mary the Egyptian is compared to a precious stone in the first portrait — a *gemme*[^38] — a descriptor not found in any of the other Version T manuscript copies. A gem is a precious thing, but it is also a hard, unliving stone, an object that men might kill one another to possess — as Mary’s many lovers in fact do— suggesting that during her sexual career, Mary exists in an objectified, lifeless state; she is beautiful but cold, unfeeling, and unapproachable. In contrast, while living spiritually in the desert, Mary is, according to every single manuscript copy, *mossue*, sometimes even in multiple lines,[^39] which may be interpreted in this context as “mossy,” “fuzzy,” “shaggy,” “bushy,” “wooly,” “furry,” or simply “hairy.” Thus, in the second portrait, Mary is undeniably pilose, perhaps even invitingly touchable. In light of this evidence, which of these Marys — the sinner or the saint — is more approachable? And what might this shift in perspective tell us about her legend and the wide array of people who encountered it? A single word in a single verse of a single manuscript may justify the raising of a question, but it will rarely provide sufficient footing for a confident interpretive claim. However, the sum total of hundreds of such pieces of textual evidence gathered across the full corpus of extant manuscripts will offer a far more stable and persuasive foundation for an argument.
 
-As I will discuss at greater length in Chapter 1, typically, the purpose of an edition is to provide readers with a tidied up version of a text — to provide the sort of seemingly stable homogeneity Pinto-Mathieu describes seeking in her article —, but this process of tidying can conceal the meaningful ‘clutter’ present in the many source manuscripts, leading to potential misrepresentations of existing material evidence in favor of a more digestible text abstracted from the manuscript record.[^40] In Chapter 2 of this dissertation, I offer digital editions of the two T portraits from each of the available manuscript copies with unique English translations for each copy; these editions and translations serve as the basis for the cross-copy close reading of the portraits performed in Chapter 3. Making these edited and translated portraits more readily available is also intended to invite my readers to approach the arguments I make in this dissertation with greater scrutiny as I believe reading across the full T corpus will lead to stronger arguments and more open, complex scholarly conversations. Pinto-Mathieu’s approach retains value in that articles like hers laid the groundwork in the late 1990s for giving literary attention to medieval texts written about — and possibly written by and for — women, and in particular for giving literary attention to hagiographical texts. But now that we have more tools — digitization and digital editing — to create editions that offer more in the way of visualizing and untangling the manuscript copies, future scholarship will be able to make greater use of the nuances of manuscript traditions and produce more solid, careful readings.
+As I will discuss at greater length in Chapter 1, typically, the purpose of an edition is to provide readers with a tidied up version of a text — to provide the sort of seemingly stable homogeneity Pinto-Mathieu describes seeking in her article — but this process of tidying can conceal the meaningful ‘clutter’ present in the many source manuscripts, leading to potential misrepresentations of existing material evidence in favor of a more digestible text abstracted from the manuscript record.[^40] In Chapter 2 of this dissertation, I offer digital editions of the two T portraits from each of the available manuscript copies with unique English translations for each copy; these editions and translations serve as the basis for the cross-copy close reading of the portraits performed in Chapter 3. Making these edited and translated portraits more readily available is also intended to invite my readers to approach the arguments I make in this dissertation with greater scrutiny as I believe reading across the full T corpus will lead to stronger arguments and more open, complex scholarly conversations. Pinto-Mathieu’s approach retains value in that articles like hers laid the groundwork in the late 1990s for giving literary attention to medieval texts written about — and possibly written by and for — women, and in particular for giving literary attention to hagiographical texts. But now that we have more tools — digitization and digital editing — to create editions that offer more in the way of visualizing and untangling the manuscript copies, future scholarship will be able to make greater use of the nuances of manuscript traditions and produce more solid, careful readings.
 
 ## Why a *Digital* Edition of Version T?
 
@@ -119,11 +119,11 @@ At the conclusion of *Éloge de la variante *(1989), Cerquiglini recognizes the 
 
 Rather than conceptualizing Version T as a singular ‘text,’ we might helpfully enrich our reading experience and our scholarship by engaging with the fact that Version T survives in eight distinct, yet interrelated, manuscripts (six complete copies and two fragments).[^42] We might highlight the nuances presented by each manuscript that would typically remain obscured through the medium of a traditional print edition.[^43] And I am not alone in thinking that Version T, in particular, merits a new edition — one that does more to render individual copies and their correlations plainly visible for the reader.
 
-Duncan Robertson, himself, put out the call for a new edition of T in his 1998 study “The Anglo-Norman Verse Life of St. Mary the Egyptian,” in which he offers a systematic study of all the extant T manuscripts, providing a valuable update to Dembowski’s previous work.[^44] In this article, Robertson proposes a roadmap to future editors for how best to approach a new edition of Version T in a way that offers improved visualizations of the full corpus of manuscript transcriptions to facilitate a more complex reading without excessively burdening the reader, writing, “Ideally, the reader should be spared the painful task of reconstituting them from lists of variants” (“The Anglo-Norman Verse Life” 41) — a clear critique of the traditional method of noting variants as paratextual material to be deciphered by only the most attentive of readers, which we see in most print editions, including Dembowski’s.[^45] Robertson, of course, praises Dembowski’s edition — an edition that remains an invaluable resource for scholars of the French Mary the Egyptian tradition —, but he makes its limitations clear:
+Duncan Robertson, himself, put out the call for a new edition of T in his 1998 study “The Anglo-Norman Verse Life of St. Mary the Egyptian,” in which he offers a systematic study of all the extant T manuscripts, providing a valuable update to Dembowski’s previous work.[^44] In this article, Robertson proposes a roadmap to future editors for how best to approach a new edition of Version T in a way that offers improved visualizations of the full corpus of manuscript transcriptions to facilitate a more complex reading without excessively burdening the reader, writing, “Ideally, the reader should be spared the painful task of reconstituting them from lists of variants” (“The Anglo-Norman Verse Life” 41) — a clear critique of the traditional method of noting variants as paratextual material to be deciphered by only the most attentive of readers, which we see in most print editions, including Dembowski’s.[^45] Robertson, of course, praises Dembowski’s edition — an edition that remains an invaluable resource for scholars of the French Mary the Egyptian tradition — but he makes its limitations clear:
 
 > The problem is that in passage after passage, the A text blurs the sense and muffles the expressive rhetoric of the poem. It does so, moreover, in the course of a normalizing, Picardizing campaign, which effectively severs the poem’s textual connection to the Anglo-Norman manuscript tradition (still present in A’s immediate source), and thereby removes it from the literary affinities that constitute its true native milieu. (“The Anglo-Norman Verse Life” 41)
 
-Evidently relying exclusively on a single manuscript witness is too restrictive, which might lead some to favor the composite editing method in which multiple copies are assembled by the editor to make a sort of Franken-edition — or perhaps an attempt is made to reconstruct the ‘Original’ text —, but Robertson likewise denounces this method, “Not only would such a construction have no documentary validity, but also it would falsify the inherent plurality of this textual tradition” (“The Anglo-Norman Verse Life” 40). If a composite edition will not do, then editors are left, once again, with selecting a particular manuscript to serve as the base text or editing a limited number of copies in parallel. While practical, considering the restrictions of the print medium, selecting a single copy, or even a few copies, fails to represent the poem comprehensively.[^46] How, then, can we offer the plenitude of the Version T corpus to readers while acknowledging the fact that a reader can only read one line at a time?
+Evidently relying exclusively on a single manuscript witness is too restrictive, which might lead some to favor the composite editing method in which multiple copies are assembled by the editor to make a sort of Franken-edition — or perhaps an attempt is made to reconstruct the ‘Original’ text — but Robertson likewise denounces this method, “Not only would such a construction have no documentary validity, but also it would falsify the inherent plurality of this textual tradition” (“The Anglo-Norman Verse Life” 40). If a composite edition will not do, then editors are left, once again, with selecting a particular manuscript to serve as the base text or editing a limited number of copies in parallel. While practical, considering the restrictions of the print medium, selecting a single copy, or even a few copies, fails to represent the poem comprehensively.[^46] How, then, can we offer the plenitude of the Version T corpus to readers while acknowledging the fact that a reader can only read one line at a time?
 
 To overcome these challenges, the method Robertson proposes is an “editorial grid” system in which the text is presented with some of its variants laid out in parallel on the page, selectively highlighting apparent differences in repetition, rhyme, and sequence — three characteristics Robertson identifies as being particularly meaningful attributes of the T poem (“The Anglo-Norman Verse Life” 31). Roberson’s solution would allow the editor to make key moments of variance much clearer, but at the time he proposed it, the physical limitations of print still meant that such an edition would not allow for fully edited comparable transcriptions of all eight manuscript copies to be laid out together for the reader, and the reader would still be reliant on the editor’s judgement in selecting which moments of the text are worthy of a more attentive reading across the copies.
 
@@ -141,7 +141,7 @@ Chapter 3, “A Cross-Copy Close Reading,” demonstrates the critical value of 
 
 Following the conclusion to this dissertation, which addresses some of the unresolved challenges raised by the work, Appendix 1, “The Manuscripts,” provides a comprehensive examination of the manuscript corpus preserving Version T. Drawing on my direct observations of all accessible manuscripts, as well as catalog records, digitizations and microfilm reproductions, and other foundational scholarship such as Peter Dembowski’s edition, I consolidate the available scattered metadata and offer detailed commentary on the location, condition, and accessibility of these eight known copies, including the two fragments. By briefly addressing the challenges of manuscript access — including personal experiences with the recent disruptions at the British Library — this study underscores the importance of supplemental resources for advancing scholarship. By bringing together this information in a single resource, this appendix not only aids researchers facing barriers to direct access but also highlights new avenues for future investigation into the material and textual history of Version T.
 
-The final component of this dissertation — Appendix 2, “Edited Transcriptions” —, is an experimental digital edition in which interested readers may explore the entirety of the extant Version T corpus. The format of Appendix 2 seeks to explicitly show readers the mediating hand of the editor in rendering the contents of these eight manuscripts for a modern audience by presenting each T copy with varying levels of editorial intervention, which may be freely navigated by the reader as desired. The inclusion of this appendix is meant to demonstrate to readers the extensive work that has already been done in transcribing and editing the full T corpus, while also acknowledging what remains to be done, namely additional revision and full English translations of every manuscript copy. Where available, links to the digital facsimiles of several T manuscripts (T-A, T-D, T-E, T-F^1^, and T-F^2^) are provided, but future iterations of this project would ideally seek to integrate these digitizations more fully with the aim of further bridging the gap between the medieval source and the modern reader. Together, Chapters 1 and 2 and Appendix 2 articulate a vision of editorial work that is rigorous, continuous, and transparent.
+The final component of this dissertation — Appendix 2, “Edited Transcriptions” — is an experimental digital edition in which interested readers may explore the entirety of the extant Version T corpus. The format of Appendix 2 seeks to explicitly show readers the mediating hand of the editor in rendering the contents of these eight manuscripts for a modern audience by presenting each T copy with varying levels of editorial intervention, which may be freely navigated by the reader as desired. The inclusion of this appendix is meant to demonstrate to readers the extensive work that has already been done in transcribing and editing the full T corpus, while also acknowledging what remains to be done, namely additional revision and full English translations of every manuscript copy. Where available, links to the digital facsimiles of several T manuscripts (T-A, T-D, T-E, T-F^1^, and T-F^2^) are provided, but future iterations of this project would ideally seek to integrate these digitizations more fully with the aim of further bridging the gap between the medieval source and the modern reader. Together, Chapters 1 and 2 and Appendix 2 articulate a vision of editorial work that is rigorous, continuous, and transparent.
 
 Finally, as the entirety of this dissertation is presented as a digital document authored using the publishing system Quarto — a new open-source publishing system made by developers of the programming language R —, readers may see how the very format of this dissertation is in alignment with its arguments. By adopting a digital format that facilitates the integration of static and dynamic content, this dissertation embodies the push for more digitally forward editions and scholarship and reflects a commitment to leveraging contemporary technology to enhance the accessibility, visualization, and interpretation of medieval texts.
 
